--- a/.travis.yml
+++ b/.travis.yml
@@ -1,50 +1,31 @@
-sudo: required
-
-language: php
-php:
-  - 7.3.9
-
+  
+dist: bionic
+os:
+  - linux
 services:
   - docker
-
+  - xvfb
+language: node_js
+node_js:
+  - "12.16.1"
 addons:
+  apt:
+    packages:
+      - dpkg
   chrome: stable
-
-branches:
-  only:
-    - master
-
+cache:
+  directories:
+    - node_modules
 before_install:
-  - nvm install 12.10.0
-  - node -v
-  - npm -v
-
-before_script:
-  - docker-compose up -d --build
-  - docker ps -a
-  - while [[ "$(curl -o /dev/null -Isw '%{http_code}\n' http://localhost/api/ping)" -ne 200 ]]; do sleep 3; echo "Waiting API to be available..."; done
-  - docker logs backend
-  - cd backend
-  - composer install
-  - cd ..
+  - npm install -g @angular/cli
   - cd app
-  - npm install
-  - cd ..
-
+install:
+  - npm ci
 script:
-  - cd backend
-  - composer run sniff
-  - MYSQL_PORT=3308 && MYSQL_HOST=127.0.0.1
-  - composer run test:unit
-  - composer run test:functional
-  - cd ..
-  - cd app
-  - npm run lint
-  - npm run test
-  - cd ..
-
-after_script:
-  - docker-compose down -v
-
+  - ng test --watch=false
+  # - ng e2e
 notifications:
-  email: false
+  webhooks:
+    on_success: change
+    on_failure: always
+    on_start: never
